welcome.lessons.welcome.conditions.Conditions.scala.error
Program:4: error: illegal start of statement
	else
        ^